# telephone-pictionary

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
src/: main.rs
