[package]
name = "telephone-pictionary"
version = "0.1.0"
authors = ["natha <nathanielkschleicher@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
image = "0.25.1"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
